# oe

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeOptions.txt  Doxyfile  README.md
example/: CMakeLists.txt  main.c
example/assets/tilemaps/: test-room.tm
example/src/core/: entity.h  room.c  room.h  scripting.h  tilemap.c  tilemap.h
example/src/game/: player.c  player.h
runtime/: CMakeLists.txt
runtime/include/: oe.h
runtime/shaders/: build.sh  main-frag.spv  main-vert.spv  main.frag  main.vert
runtime/src/: gfx.c  init.c  input.c  internal.h  log.c  math.c  utils.c
